--- a/FreeCodeCamp/FreeCodeCamp Data Analysis with Python/freecodecamp-intro-to-pandas-master/2 - Pandas Series exercises.ipynb
+++ b/FreeCodeCamp/FreeCodeCamp Data Analysis with Python/freecodecamp-intro-to-pandas-master/2 - Pandas Series exercises.ipynb
@@ -19,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.25.3\n"
+      "1.4.2\n"
      ]
     }
    ],
@@ -52,11 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lucaa\\AppData\\Local\\Temp\\ipykernel_356\\3186221669.py:2: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "  x = pd.Series()\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "x = pd.Series()"
    ]
   },
   {
@@ -81,11 +91,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'B', 'C'] <class 'list'>\n",
+      "0    A\n",
+      "1    B\n",
+      "2    C\n",
+      "dtype: object <class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = ['A','B','C']\n",
+    "print(X, type(X))\n",
+    "\n",
+    "Y = pd.Series(X)\n",
+    "print(Y, type(Y))"
    ]
   },
   {
@@ -114,11 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    A\n",
+       "1    B\n",
+       "2    C\n",
+       "Name: My letters, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series(['A','B','C'])\n",
+    "X.name = 'My letters'\n",
+    "X"
    ]
   },
   {
@@ -146,11 +190,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A' 'B' 'C']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "print(X.values)"
    ]
   },
   {
@@ -184,11 +237,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "first     A\n",
+       "second    B\n",
+       "third     C\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series(['A','B','C'])\n",
+    "index_names = ['first', 'second', 'third']\n",
+    "\n",
+    "X.index = index_names\n",
+    "X"
    ]
   },
   {
@@ -217,11 +289,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series(['A','B','C'], index=['first', 'second', 'third'])\n",
+    "\n",
+    "X[0]\n",
+    "X.iloc[0]\n",
+    "X.loc['first']\n",
+    "X['first']"
    ]
   },
   {
@@ -250,11 +339,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X[-1]\n",
+    "X.iloc[-1]\n",
+    "X.loc['third']\n",
+    "X['third']"
    ]
   },
   {
@@ -283,11 +387,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "second    B\n",
+       "third     C\n",
+       "forth     D\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series(['A','B','C','D','E'],\n",
+    "              index=['first','second','third','forth','fifth'])\n",
+    "\n",
+    "X[1:-1]\n",
+    "X.iloc[1:-1]\n",
+    "X.loc['second':'forth']\n"
    ]
   },
   {
@@ -317,11 +441,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fifth     E\n",
+       "forth     D\n",
+       "third     C\n",
+       "second    B\n",
+       "first     A\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series(['A','B','C','D','E'],\n",
+    "              index=['first','second','third','forth','fifth'])\n",
+    "\n",
+    "(X[::-1])\n",
+    "X.iloc[::-1]\n"
    ]
   },
   {
@@ -350,11 +495,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'E'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series(['A','B','C','D','E'],\n",
+    "              index=['first','second','third','forth','fifth'])\n",
+    "\n",
+    "X[['first', 'fifth']]\n",
+    "X.iloc[[0, -1]]\n",
+    "X[[0, -1]]"
    ]
   },
   {
@@ -395,7 +557,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series([1,2,3,4,5],\n",
+    "              index=['first','second','third','forth','fifth'])\n",
+    "\n",
+    "pd.Series(X, dtype=np.float)"
    ]
   },
   {
@@ -427,7 +593,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series([1,2,3,4,5],\n",
+    "              index=['first','second','third','forth','fifth'])\n",
+    "\n",
+    "X[::-1]"
    ]
   },
   {
@@ -455,11 +625,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "first     1\n",
+       "second    2\n",
+       "third     3\n",
+       "forth     4\n",
+       "fifth     5\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series([4,2,5,1,3],\n",
+    "              index=['forth','second','fifth','first','third'])\n",
+    "\n",
+    "X = X.sort_values()\n",
+    "X"
    ]
   },
   {
@@ -488,11 +679,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A     1\n",
+       "B     2\n",
+       "C     3\n",
+       "D     4\n",
+       "E    10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series([1,2,3,4,5],\n",
+    "              index=['A','B','C','D','E'])\n",
+    "\n",
+    "X[4] = 10\n",
+    "X"
    ]
   },
   {
@@ -555,11 +767,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     6\n",
+       "1     7\n",
+       "2     8\n",
+       "3     9\n",
+       "4    10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series([1,2,3,4,5])\n",
+    "\n",
+    "X + 5"
    ]
   },
   {
@@ -593,11 +824,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series([-1,2,0,-4,5,6,0,0,-9,10])\n",
+    "\n",
+    "mask = X <=0"
    ]
   },
   {
@@ -625,11 +859,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   -1\n",
+       "2    0\n",
+       "3   -4\n",
+       "6    0\n",
+       "7    0\n",
+       "8   -9\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X[mask]"
    ]
   },
   {
@@ -657,11 +909,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5     6\n",
+       "9    10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X[X>5]"
    ]
   },
   {
@@ -689,11 +955,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1     2\n",
+       "4     5\n",
+       "5     6\n",
+       "9    10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X[X>X.mean()]"
    ]
   },
   {
@@ -721,11 +1003,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1     2\n",
+       "9    10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X[(X==2) | (X == 10)]"
    ]
   },
   {
@@ -761,11 +1057,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series([-1,2,0,-4,5,6,0,0,-9,10])\n",
+    "\n",
+    "X.all()\n"
    ]
   },
   {
@@ -796,7 +1106,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series([-1,2,0,-4,5,6,0,0,-9,10])\n",
+    "\n",
+    "X.any()"
    ]
   },
   {
@@ -830,11 +1143,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series([-1,2,0,-4,5,6,0,0,-9,10])\n",
+    "\n",
+    "X.sum()"
    ]
   },
   {
@@ -862,11 +1189,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series([-1,2,0,-4,5,6,0,0,-9,10])\n",
+    "\n",
+    "X.mean()"
    ]
   },
   {
@@ -894,11 +1235,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here\n"
+    "# your code goes here\n",
+    "X = pd.Series([-1,2,0,-4,5,6,0,0,-9,10])\n",
+    "\n",
+    "X.max()"
    ]
   },
   {
@@ -925,7 +1280,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -939,7 +1294,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "50eb9f42acb543f99b0735dbf0911e65e8d327227873b4023c8c6d20c4766cd4"
+   }
   }
  },
  "nbformat": 4,
